tests/resources/errors/errors2.arco
import std;
import std.TestError;

fn foo() raises TestError {
    raise TestError{};
}

fn bar() raises TestError {
    foo();
}

fn main() {
    bar() catch err {
        std.print(err.get_message());
    };
}